tests/snapshots/run_wpt_conformance__litert_abs_int8_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 64
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
abs.https.any.js abs int8 4D tensor, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    absInput: i8[1, 2, 2, 1];
  }

  nodes {
    [absOutput] = abs(absInput, label="");
  }

  outputs { absOutput; }
}
