tests/snapshots/run_wpt_conformance__litert_add_float16_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 52
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "add.https.any.js",
    "add float16 1D constant tensors",
    "litert",
    "PASS",
)
